--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 }
 
 #keyart-2 {
-  background-image: url("http://www.firewatchgame.com/images/parallax/parallax2.png");
+  background-image: url("/parallax2.png");
 }
 
 #keyart-3 {
