--- a/css/btcpay.css
+++ b/css/btcpay.css
@@ -6,8 +6,7 @@
 .separatorGem {background: #ef8022;}
 .action-button {color: #fff; background-color: #ef8022;border-color: #ef8022;}
 .action-button:hover {background-color: #ffc313;}
-.action-button:focus, .action-button.focus {color: #fff;background-color: #ef8022;
-    border-color: #ef8022;}
+.action-button:focus, .action-button.focus {color: #fff;background-color: #ef8022;    border-color: #ef8022;}
 .action-button:active, .action-button.active, .open>.action-button.dropdown-toggle {    color: #fff;    background-color: #ef8022;    border-color: #ef8022;}
 .action-button:active:hover, .action-button:active:focus, .action-button:active.focus, .action-button.active:hover, .action-button.active:focus, .action-button.active.focus, .open>.action-button.dropdown-toggle:hover, .open>.action-button.dropdown-toggle:focus, .open>.action-button.dropdown-toggle.focus {    color: #fff;    background-color: #ef8022;    border-color: #ef8022;}
 .btnGroupLnd button {border: solid 1px #ef8022;}
